slider gap corrections

--- a/styles.css
+++ b/styles.css
@@ -372,6 +372,8 @@ main {
 .plans-container__slider {
     display: flex;
     height: 316px;
+    padding: 0 50%;
+    gap: 35px;
     overflow-x: scroll;
     overscroll-behavior-x: contain;
     scroll-snap-type: x proximity;
@@ -383,17 +385,11 @@ main {
     min-width: 190px;
     max-width: 300px;
     height: 250px;
-    margin: 50px 15px 0px;
+    margin: 50px auto 0px;
     padding: 0 15px;
     background-color: var(--just-white);
     border-radius: 15px;
     box-shadow: 0px 4px 8px rgba(89, 73, 30, 0.16);
-}
-.plan-card-left {
-    margin-left: 50%;
-}
-.plan-card-right {
-    margin-right: 50%;
 }
 .plan-card__recomendation {
     position: absolute;
